--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - db
   db:
     image: mysql:5.7
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci # 文字コード変更
     platform: linux/x86_64
     volumes:
       - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
